# kueken

./: .gitmodules  CMakeLists.txt
documentation/: kueken.vpp  kueken.vpp~1  kueken.vpp~2
include/core/: assembler.hpp  blend.hpp  blit.hpp  buffer.hpp  clear.hpp  context.hpp  draw.hpp  environment.hpp  feedback.hpp  framebuffer.hpp  image.hpp  kueken.hpp  layout.hpp  manager.hpp  program.hpp  query.hpp  rasterizer.hpp  read_pixels.hpp  renderbuffer.hpp  renderer.hpp  rendertarget.hpp  sampler.hpp  test.hpp  texture.hpp  variable.hpp
include/core/detail/: command.hpp  common.hpp  creator.hpp  detail.hpp  manager.hpp  manager.inl  name.hpp  name.inl
include/fx/: assembler.hpp  blend.hpp  blit.hpp  clear.hpp  effect.hpp  image.hpp  pass.hpp  program.hpp  query.hpp  rasterizer.hpp  read_pixels.hpp  renderbuffer.hpp  rendertarget.hpp  sampler.hpp  technique.hpp  test.hpp  texture.hpp
include/io/: assembler.hpp  blend.hpp  buffer.hpp  draw.hpp  feedback.hpp  image.hpp  program.hpp  rasterizer.hpp  sampler.hpp  test.hpp  texture.hpp  variable.hpp
include/load/: blend.hpp  image.hpp  load.hpp  program.hpp  query.hpp  rasterizer.hpp  renderbuffer.hpp  rendertarget.hpp  sampler.hpp  test.hpp  texture.hpp
sample/: 01-core-basic.cpp  02-core-uniformbuffer.cpp  03-core-texturebuffer.cpp  04-core-subroutine.cpp  05-core-framebuffer.cpp  05-core-multisample.cpp  06-core-multisample.cpp  CMakeLists.txt
sample/01-core-basic/: CMakeLists.txt  base.cpp  base.hpp  main.cpp  main.hpp
sample/01-load-Basic/: CMakeLists.txt  main.cpp
sample/02-core-multisample/: CMakeLists.txt  base.cpp  main.cpp  main.hpp
sample/02-core-uniformbuffer/: CMakeLists.txt  main.cpp  main.hpp
sample/03-core-query/: CMakeLists.txt  main.cpp
sample/04-core-texturebuffer/: CMakeLists.txt  main.cpp
sample/05-core-render2buffer/: CMakeLists.txt  base.hpp  main.cpp  main.hpp
sample/06-core-phong/: CMakeLists.txt  main.cpp
sample/07-core-normalmapping/: CMakeLists.txt  main.cpp
sample/08-core-conditional/: CMakeLists.txt  base.hpp  main.cpp
sample/09-core-multitexture/: CMakeLists.txt  main.cpp
sample/10-core-displacement/: CMakeLists.txt  base.cpp  main.cpp
sample/11-core-instancing/: CMakeLists.txt  main.cpp
sample/12-core-blur/: CMakeLists.txt  main.cpp
sample/13-core-render2texture/: CMakeLists.txt  base.cpp  main.cpp
sample/15-core-uniformbuffer/: CMakeLists.txt  main.cpp  main.hpp
sample/data/: bindable.frag  bindable.vert  blend-default.xml  blur.frag  blur.vert  conditional2.frag  displacement.vert  effect1.xml  flat-color.frag  framebuffer.frag  framebuffer.vert  image1.xml  lady_snow.tga  lady_snow_spe2.tga  multisampling.frag  multisampling.vert  multitexture.vert  normalmapping.vert  phong.vert  program1.xml  rasterizer-default.xml  rasterizer.xml  render2buffer-pass1.vert  render2buffer-pass2.frag  sampler1.xml  subroutine.vert  test-default.xml  test.kfx  texture-array.frag  texture-array.vert  texture-buffer.frag  texture-buffer.vert  texture.frag  texture.vert  uniform-buffer.frag  uniform-buffer.vert
source/: CMakeLists.txt
source/core/: CMakeLists.txt  assembler.cpp  blend.cpp  blit.cpp  buffer.cpp  clear.cpp  draw.cpp  framebuffer.cpp  image.cpp  layout.cpp  manager.cpp  program.cpp  query.cpp  rasterizer.cpp  read_pixels.cpp  renderbuffer.cpp  renderer.cpp  rendertarget.cpp  sampler.cpp  test.cpp  texture.cpp  variable.cpp
source/fx/: CMakeLists.txt  assembler.cpp  blend.cpp  buffer.cpp  effect.cpp  image.cpp  pass.cpp  program.cpp  rasterizer.cpp  read_pixels.cpp  rendertarget.cpp  sampler.cpp  test.cpp  texture.cpp
source/io/: CMakeLists.txt  blend.cpp  image.cpp  program.cpp  rasterizer.cpp  sampler.cpp  texture.cpp
source/load/: CMakeLists.txt  blend.cpp  image.cpp  program.cpp  rasterizer.cpp  renderbuffer.cpp  rendertarget.cpp  sampler.cpp  test.cpp  texture.cpp
test/: 01-core-basic.cpp  02-core-uniformbuffer.cpp  03-core-texturebuffer.cpp  04-core-subroutine.cpp  05-core-framebuffer.cpp  06-core-multisample.cpp  07-core-viewport.cpp  CMakeLists.txt
test/01-core-basic/: CMakeLists.txt
test/01-load-Basic/: CMakeLists.txt  main.cpp  main.hpp
test/02-core-multisample/: main.cpp
test/03-core-query/: CMakeLists.txt  base.cpp  main.cpp
test/05-core-render2buffer/: CMakeLists.txt
test/06-core-phong/: CMakeLists.txt  main.cpp  main.hpp
test/07-core-normalmapping/: CMakeLists.txt  main.cpp
test/08-core-conditional/: CMakeLists.txt
test/09-core-multitexture/: CMakeLists.txt
test/10-core-displacement/: CMakeLists.txt
test/11-core-instancing/: CMakeLists.txt
test/12-core-blur/: CMakeLists.txt
test/13-core-render2texture/: main.cpp  main.hpp
test/15-core-uniformbuffer/: CMakeLists.txt
test/data/: conditional1.vert  conditional2.vert  displacement.frag  flat-color.vert  framebuffer.vert  instancing.frag  instancing.vert  küken256.dds  multisampling.vert  multitexture.frag  normalmap.tga  normalmapping.frag  phong.frag  render2buffer-pass1.frag  render2buffer-pass2.vert  subroutine.frag  texture-old.frag  texture-old.vert  texture-rect.frag  texture-rect.vert  texture.frag  texture.geom  viewport.frag  viewport.geom  viewport.vert
