set(KUEKEN_SAMPLES_NAME kueken-samples)
add_group_target_GTC(${KUEKEN_SAMPLES_NAME})

add_subdirectory (01-core-basic)
#add_subdirectory (02-core-uniformbuffer)
#add_subdirectory (02-core-multisample)
#add_subdirectory (03-core-query)
#add_subdirectory (04-core-texturebuffer)
#add_subdirectory (05-core-render2buffer)
#add_subdirectory (06-core-phong)
#add_subdirectory (07-core-normalmapping)
#add_subdirectory (08-core-conditional)
#add_subdirectory (09-core-multitexture)
#add_subdirectory (10-core-displacement)
#add_subdirectory (11-core-instancing)
#add_subdirectory (12-core-blur)
#add_subdirectory (13-core-render2texture)
#add_subdirectory (15-core-uniformbuffer)

#add_subdirectory (01-load-basic)